--- a/src/main/resources/vue/layout.html
+++ b/src/main/resources/vue/layout.html
@@ -16,6 +16,7 @@
 
     <!--https://fontawesome.com/start send in email address to get embed link (check junk email) -->
     <script src="https://kit.fontawesome.com/43e8e94a0b.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <!-- Javalin’s Vue plugin will scan your /resources/vue folder and put -->
     <!-- all your Vue components into componentRegistration -->
     @componentRegistration
